responsive menu overlaping fixed

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -118,7 +118,7 @@ nav {
 	}
 	header .responsive_nav {
 		transform: translateY(100vh);
-
+		z-index: 1;
 	}
 
 	nav .nav-close-btn {
