--- a/src/styles/countdown-style.css
+++ b/src/styles/countdown-style.css
@@ -81,6 +81,7 @@
     .show-counter
     {
       gap: 0;
+      margin-top: 7rem;
     }
     .show-counter .countdown > p{
       font-size: 30px;
