--- a/src/styles/hero-style.css
+++ b/src/styles/hero-style.css
@@ -37,6 +37,7 @@ h3
     {
         width: 90%;
         overflow-x:hidden ;
+        padding-top: 8rem;
     }
     .hero-text h1
     {
